--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.3.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
