--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "back": "cd ./back-end && npm run dev",
+    "front": "cd ./front-end && npm run dev"
   },
   "keywords": [],
   "author": "",
